Header + Footer convert to custom elements

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Squad Management Tool</title>
 </head>
-<body id="app">
+<body>
+    <cmp-header user-name="Cauê Jesus"></cmp-header>
+    
+    <cmp-footer></cmp-footer>
     <script type="module" src="./main.js"></script>
 </body>
 </html>
