--- a/index.html
+++ b/index.html
@@ -8,7 +8,99 @@
 </head>
 <body>
     <cmp-header user-name="Cauê Jesus"></cmp-header>
-    
+    <div class="main">
+        <section class="info-block">
+            <div class="header">
+                <h2>My teams</h2>
+                <div class="btn-add-team">+</div>
+            </div>
+            <div class="content">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name <span>F</span></th>
+                            <th>Description <span>F</span></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Barcelona</td>
+                            <td>Barcelona Squad</td>
+                        </tr>
+                        <tr>
+                            <td>Barcelona</td>
+                            <td>Barcelona Squad</td>
+                        </tr>
+                        <tr>
+                            <td>Barcelona</td>
+                            <td>Barcelona Squad</td>
+                        </tr>
+                        <tr>
+                            <td>Barcelona</td>
+                            <td>Barcelona Squad</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <div class="right">
+            <section class="info-block">
+                <div class="header">
+                    <h2>Top 5</h2>
+                </div>
+                <div class="content">
+                    <div class="avg-age">
+                        <div class="avg-age-content">
+                            <p>Highest avg age</p>
+                            <ul>
+                                <li>Inter Milan <span>31.9</span></li>
+                                <li>APOEL Nicosia <span>31.7</span></li>
+                                <li>AC Milan <span>31.6</span></li>
+                                <li>Besitk JK <span>31.5</span></li>
+                                <li>Olympiacos Piraeus <span>31.4</span></li>
+                            </ul>
+                        </div>
+                        <div class="avg-age-content">
+                            <p>Lowest avg age</p>
+                            <ul>
+                                <li>Besitk JK <span>21.9</span></li>
+                                <li>Inter Milan <span>21.7</span></li>
+                                <li>Olympiacos Piraeus <span>21.6</span></li>
+                                <li>APOEL Nicosia <span>21.5</span></li>
+                                <li>AC Milan <span>21.4</span></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="picked-container">
+                <div class="test">
+                    <h3>Most picked player</h3>
+                    <div class="picked-player">
+                        <div style="border: 3px dashed var(--purple-blue); padding: 10px; border-radius: 50%;">
+                            <div class="player-photo most-picked">
+                                <span>CR</span>
+                            </div>
+                        </div>
+                        <div class="percentage">
+                            <span>75%</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="test">
+                    <h3>Less picked player</h3>
+                    <div class="picked-player">
+                        <div class="player-photo">
+                            <span>NJ</span>
+                        </div>
+                        <div class="percentage">
+                            <span>25%</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
     <cmp-footer></cmp-footer>
     <script type="module" src="./main.js"></script>
 </body>
