Added icons + table style

--- a/index.html
+++ b/index.html
@@ -18,26 +18,54 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Name <span>F</span></th>
-                            <th>Description <span>F</span></th>
+                            <th>Name <img title="Sort by name" src="./images/icons/sort-solid.svg" alt="Sort by name"></th>
+                            <th colspan="2">Description <img title="Sort by description" src="./images/icons/sort-solid.svg" alt="Sort by description"></th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>Barcelona</td>
                             <td>Barcelona Squad</td>
+                            <td>
+                                <div class="action-icons">
+                                    <img src="./images/icons/trash-solid.svg" alt="Delete">
+                                    <img src="./images/icons/share-nodes-solid.svg" alt="">
+                                    <img src="./images/icons/pen-solid.svg" alt="">
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <td>Barcelona</td>
                             <td>Barcelona Squad</td>
+                            <td>
+                                <div class="action-icons">
+                                    <img src="./images/icons/trash-solid.svg" alt="Delete">
+                                    <img src="./images/icons/share-nodes-solid.svg" alt="">
+                                    <img src="./images/icons/pen-solid.svg" alt="">
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <td>Barcelona</td>
                             <td>Barcelona Squad</td>
+                            <td>
+                                <div class="action-icons">
+                                    <img src="./images/icons/trash-solid.svg" alt="Delete">
+                                    <img src="./images/icons/share-nodes-solid.svg" alt="">
+                                    <img src="./images/icons/pen-solid.svg" alt="">
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <td>Barcelona</td>
                             <td>Barcelona Squad</td>
+                            <td>
+                                <div class="action-icons">
+                                    <img src="./images/icons/trash-solid.svg" alt="Delete">
+                                    <img src="./images/icons/share-nodes-solid.svg" alt="">
+                                    <img src="./images/icons/pen-solid.svg" alt="">
+                                </div>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -73,12 +101,12 @@
                     </div>
                 </div>
             </section>
-            <section class="picked-container">
-                <div class="test">
+            <section class="picked-container vertical-divider">
+                <div>
                     <h3>Most picked player</h3>
                     <div class="picked-player">
-                        <div style="border: 3px dashed var(--purple-blue); padding: 10px; border-radius: 50%;">
-                            <div class="player-photo most-picked">
+                        <div class="most-picked">
+                            <div class="player-photo">
                                 <span>CR</span>
                             </div>
                         </div>
@@ -87,7 +115,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="test">
+                <div>
                     <h3>Less picked player</h3>
                     <div class="picked-player">
                         <div class="player-photo">
