--- a/team.html
+++ b/team.html
@@ -18,120 +18,109 @@
                     <section class="team-information">
                         <h2>Team Information</h2>
                         <div>
-                            <div class="form-group">
-                                <label for="teamName">Team name</label>
-                                <input type="text" name="name" id="teamName" value="" placeholder="Insert team name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="teamDescription">Description</label>
-                                <input type="textarea" name="description" id="teamDescription" value="">
-                            </div>
-                        </div>
-                        <div>
-                            <div class="form-group radio">
-                                <label for="teamWebsite">Team website</label>
-                                <input type="url" name="website" id="teamWebsite" value="" placeholder="https://myteam.com" required>
-                            </div>
-                            <fieldset class="form-group">
-                                <label>Team type</label>
-                                <div class="radio">
-                                    <div>
-                                        <input type="radio" name="type" id="teamReal" required><label for="teamReal">Real</label>
-                                    </div>
-                                    <div>
-                                        <input type="radio" name="type" id="teamFantasy" required><label for="teamFantasy">Fantasy</label>
-                                    </div>
+                            <div class="column">
+                                <div class="form-group">
+                                    <label for="teamName">Team name</label>
+                                    <input type="text" name="name" id="teamName" value="" placeholder="Insert team name" required>
                                 </div>
-                            </fieldset>
-                            <div class="form-group">
-                                <label for="teamTags">Tags</label>
-                                <input type="textarea" name="tags" id="teamTags" value="" placeholder="Type tag and and press enter or ,">
+                                <div class="form-group">
+                                    <label for="teamDescription">Description</label>
+                                    <textarea name="description" id="teamDescription" rows="10" autocomplete="off" value=""></textarea>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <div class="form-group radio">
+                                    <label for="teamWebsite">Team website</label>
+                                    <input type="url" name="website" id="teamWebsite" value="" placeholder="https://myteam.com" required>
+                                </div>
+                                <fieldset class="form-group">
+                                    <label>Team type</label>
+                                    <div class="radio">
+                                        <div>
+                                            <input type="radio" name="type" id="teamReal" required><label for="teamReal">Real</label>
+                                        </div>
+                                        <div>
+                                            <input type="radio" name="type" id="teamFantasy" required><label for="teamFantasy">Fantasy</label>
+                                        </div>
+                                    </div>
+                                </fieldset>
+                                <div class="form-group">
+                                    <label for="teamTags">Tags</label>
+                                    <textarea name="tags" id="teamTags" rows="5" placeholder="Type tag and and press enter or ,"></textarea>                                    
+                                </div>
                             </div>
                         </div>
                     </section>
                     <section class="configure-squad">
                         <h2>Configure Squad</h2>
                         <div>
-                            <div class="form-group formation">
-                                <label for="teamFormation">Formation</label>
-                                <select name="formation" id="teamFormation">
-                                    <option value="1">3 - 2 - 2 - 3</option>
-                                    <option value="2">3 - 2 - 3 - 1</option>
-                                    <option value="3">3 - 4 - 3</option>
-                                    <option value="4">3 - 5 - 2</option>
-                                    <option value="4">4 - 2 - 3 - 1</option>
-                                    <option value="6">4 - 3 - 1 - 1</option>
-                                    <option value="7">4 - 3 - 2</option>
-                                    <option value="8">4 - 4 - 2</option>
-                                    <option value="9">4 - 5 - 1</option>
-                                    <option value="10">5 - 4 -1</option>
-                                </select>
-                            </div>
-                            <div class="soccer-field">                                
-                            </div>
-                        </div>
-                        <div class="search-players">
-                            <div class="form-group">
-                                <label for="searchPlayer">Search Players</label>
-                                <input type="search" name="tags" id="searchPlayer" placeholder="Search by a player name">
-                            </div>
                             <div>
-                                <ul clas="players-list">
-                                    <li class="player-infos">
-                                        <div>
+                                <div class="form-group formation">
+                                    <label for="teamFormation">Formation</label>
+                                    <select name="formation" id="teamFormation" required>
+                                        <option value="1">3 - 2 - 2 - 3</option>
+                                        <option value="2">3 - 2 - 3 - 1</option>
+                                        <option value="3">3 - 4 - 3</option>
+                                        <option value="4">3 - 5 - 2</option>
+                                        <option value="4">4 - 2 - 3 - 1</option>
+                                        <option value="6">4 - 3 - 1 - 1</option>
+                                        <option value="7">4 - 3 - 2</option>
+                                        <option value="8">4 - 4 - 2</option>
+                                        <option value="9">4 - 5 - 1</option>
+                                        <option value="10">5 - 4 -1</option>
+                                    </select>
+                                </div>
+                                <div class="soccer-field horizontal-divider">
+                                </div>
+                            </div>
+                            <div class="search-players">
+                                <div class="form-group">
+                                    <label for="searchPlayer">Search Players</label>
+                                    <input type="search" name="tags" id="searchPlayer" placeholder="Type a player name to search">
+                                </div>
+                                <div class="search-players-results">
+                                    <ul class="players-list">
+                                        <li class="player-infos">
                                             <div>
-                                                <b>Name:</b>
-                                                <p>Cristiano Ronaldo</p>
+                                                <div>
+                                                    <span><b>Name:</b> Cristiano Ronaldo</span> 
+                                                </div>
+                                                <div>
+                                                    <span><b>Nationality:</b> Portugal</span>
+                                                </div>
+                                            </div>
+                                            <div>                                                
+                                                <span><b>Age:</b> 34</span>
+                                            </div>
+                                        </li>
+                                        <li class="player-infos">
+                                            <div>
+                                                <div>
+                                                    <span><b>Name:</b> Ronaldo Luiz de Alves</span>
+                                                </div>
+                                                <div>
+                                                    <span><b>Nationality:</b> Brazil</span>
+                                                </div>
                                             </div>
                                             <div>
-                                                <b>Nationality:</b>
-                                                <p>Portugal</p>
+                                                <span><b>Age:</b> 28</span>
                                             </div>
-                                        </div>
-                                        <div>
+                                        </li>
+                                        <li class="player-infos">
                                             <div>
-                                                <b>Age:</b>
-                                                <p>32</p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="player-infos">
-                                        <div>
-                                            <div>
-                                                <b>Name:</b>
-                                                <p>Ronaldo Luiz de Alves</p>
+                                                <div>
+                                                    <span><b>Name:</b> Ronaldo da Silva de Souza</span>
+                                                </div>
+                                                <div>
+                                                    <span><b>Nationality:</b> Brazil</span>
+                                                </div>
                                             </div>
                                             <div>
-                                                <b>Nationality:</b>
-                                                <p>Brazil</p>
+                                                <span><b>Age:</b> 19</span>                                                
                                             </div>
-                                        </div>
-                                        <div>
-                                            <div>
-                                                <b>Age:</b>
-                                                <p>28</p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="player-infos">
-                                        <div>
-                                            <div>
-                                                <b>Name:</b>
-                                                <p>Ronaldo da Silva de Souza</p>
-                                            </div>
-                                            <div>
-                                                <b>Nationality:</b>
-                                                <p>Brazil</p>
-                                            </div>
-                                        </div>
-                                        <div>
-                                            <div>
-                                                <b>Age:</b>
-                                                <p>18</p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </section>
