Form adjusts + soccer field players

--- a/team.html
+++ b/team.html
@@ -52,7 +52,15 @@
                                 </fieldset>
                                 <div class="form-group">
                                     <label for="teamTags">Tags</label>
-                                    <textarea name="tags" id="teamTags" rows="5" placeholder="Type tag and and press enter or ,"></textarea>                                    
+                                    <div class="input-tag">
+                                        <div class="tag-list">
+                                            <div class="tag"><span>BR </span><div class="remove-icon"><i class="fa-solid fa-close"></i></div></div>
+                                            <div class="tag"><span>PTW </span><div class="remove-icon"><i class="fa-solid fa-close"></i></div></div>
+                                            <div class="tag"><span>Attack </span><div class="remove-icon"><i class="fa-solid fa-close"></i></div></div>
+                                            <input type="text" name="tags" id="tagInput" />
+                                        </div>
+                                    </div>
+                                    <!-- <textarea name="tags" id="teamTags" rows="5" placeholder="Type tag and and press enter or ,"></textarea> -->
                                 </div>
                             </div>
                         </div>
@@ -77,6 +85,17 @@
                                     </select>
                                 </div>
                                 <div class="soccer-field horizontal-divider">
+                                    <div class="player-circle P1"><i class="fa-solid fa-plus"></i></div>
+                                    <div class="player-circle P2"><i class="fa-solid fa-plus"></i></div>
+                                    <div class="player-circle P3"><i class="fa-solid fa-plus"></i></div>
+                                    <div class="player-circle P4"><i class="fa-solid fa-plus"></i></div>
+                                    <div class="player-circle P5"><i class="fa-solid fa-plus"></i></div>
+                                    <div class="player-circle P6"><i class="fa-solid fa-plus"></i></div>
+                                    <div class="player-circle P7"><i class="fa-solid fa-plus"></i></div>
+                                    <div class="player-circle P8"><i class="fa-solid fa-plus"></i></div>
+                                    <div class="player-circle P9"><i class="fa-solid fa-plus"></i></div>
+                                    <div class="player-circle P10"><i class="fa-solid fa-plus"></i></div>
+                                    <div class="player-circle P11"><i class="fa-solid fa-plus"></i></div>
                                 </div>
                             </div>
                             <div class="search-players">
