--- a/team.html
+++ b/team.html
@@ -31,7 +31,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="teamDescription">Description</label>
-                                    <textarea name="description" id="teamDescription" rows="10" autocomplete="off" value=""></textarea>
+                                    <textarea name="description" id="teamDescription" rows="10" autocomplete="off"></textarea>
                                 </div>
                             </div>
                             <div class="column">
@@ -85,23 +85,23 @@
                                     </select>
                                 </div>
                                 <div class="soccer-field horizontal-divider">
-                                    <div class="player-circle P1"><i class="fa-solid fa-plus"></i></div>
-                                    <div class="player-circle P2"><i class="fa-solid fa-plus"></i></div>
-                                    <div class="player-circle P3"><i class="fa-solid fa-plus"></i></div>
-                                    <div class="player-circle P4"><i class="fa-solid fa-plus"></i></div>
-                                    <div class="player-circle P5"><i class="fa-solid fa-plus"></i></div>
-                                    <div class="player-circle P6"><i class="fa-solid fa-plus"></i></div>
-                                    <div class="player-circle P7"><i class="fa-solid fa-plus"></i></div>
-                                    <div class="player-circle P8"><i class="fa-solid fa-plus"></i></div>
-                                    <div class="player-circle P9"><i class="fa-solid fa-plus"></i></div>
-                                    <div class="player-circle P10"><i class="fa-solid fa-plus"></i></div>
-                                    <div class="player-circle P11"><i class="fa-solid fa-plus"></i></div>
+                                    <div class="player-circle P1"></div>
+                                    <div class="player-circle P2"></div>
+                                    <div class="player-circle P3"></div>
+                                    <div class="player-circle P4"></div>
+                                    <div class="player-circle P5"></div>
+                                    <div class="player-circle P6"></div>
+                                    <div class="player-circle P7"></div>
+                                    <div class="player-circle P8"></div>
+                                    <div class="player-circle P9"></div>
+                                    <div class="player-circle P10"></div>
+                                    <div class="player-circle P11"></div>
                                 </div>
                             </div>
                             <div class="search-players">
                                 <div class="form-group">
                                     <label for="searchPlayer">Search Players</label>
-                                    <input type="search" name="tags" id="searchPlayer" placeholder="Type a player name to search">
+                                    <input type="search" name="search" id="searchPlayer" placeholder="Type a player name to search">
                                 </div>
                                 <div class="search-players-results">
                                     <ul class="players-list"></ul>
@@ -117,6 +117,7 @@
     <cmp-footer></cmp-footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>
     <script type="module" src="./src/js/team-script.js"></script>
 </body>
 </html>
