--- a/team.html
+++ b/team.html
@@ -20,7 +20,7 @@
                 <h2>Create your team</h2>
             </div>
             <div class="content">
-                <form id="teamForm" action="">
+                <form id="teamForm" action="submit">
                     <section class="team-information">
                         <h2>Team Information</h2>
                         <div>
@@ -43,10 +43,10 @@
                                     <label>Team type</label>
                                     <div class="radio">
                                         <div>
-                                            <input type="radio" name="type" id="teamReal" value="real" required><label for="teamReal">Real</label>
+                                            <input type="radio" name="type" id="teamReal" value="real" checked><label for="teamReal">Real</label>
                                         </div>
                                         <div>
-                                            <input type="radio" name="type" id="teamFantasy" value="fantasy" required><label for="teamFantasy">Fantasy</label>
+                                            <input type="radio" name="type" id="teamFantasy" value="fantasy"><label for="teamFantasy">Fantasy</label>
                                         </div>
                                     </div>
                                 </fieldset>
