--- a/team.html
+++ b/team.html
@@ -57,8 +57,8 @@
                                             <div class="tag"><span>BR </span><div class="remove-icon"><i class="fa-solid fa-close"></i></div></div>
                                             <div class="tag"><span>PTW </span><div class="remove-icon"><i class="fa-solid fa-close"></i></div></div>
                                             <div class="tag"><span>Attack </span><div class="remove-icon"><i class="fa-solid fa-close"></i></div></div>
-                                            <input type="text" name="tags" id="tagInput" />
                                         </div>
+                                        <input type="text" name="tags" id="tagInput" maxlength="20" />
                                     </div>
                                     <!-- <textarea name="tags" id="teamTags" rows="5" placeholder="Type tag and and press enter or ,"></textarea> -->
                                 </div>
